--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Lasagna Recipe</title>
-</head>
-<body>
-  <h1>Lasagna</h1>
-</body>
+  <head>
+    <title>Lasagna Recipe</title>
+  </head>
+  <body>
+    <h1>Lasagna</h1>
+  </body>
 </html>
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" 
-/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lasagna recipe</title>
   </head>
   <body>
     <h1>The best lasagna</h1>
     <img
-      
-src="https://www.onmanorama.com/content/dam/mm/en/food/foodie/images/2020/1/26/lasagna.jpg.transform/845x440/image.jpg"
+      src="https://www.onmanorama.com/content/dam/mm/en/food/foodie/images/2020/1/26/lasagna.jpg.transform/845x440/image.jpg"
       alt="A lasagna on a plate"
     />
 
     <h2>Description</h2>
     <p>
       Indulge in the delightful flavors of the best lasagna with this
-      mouthwatering recipe. Layers of tender lasagna noodles intermingled 
-with
-      rich, savory Bolognese sauce, creamy béchamel, and a generous 
-sprinkling
-      of grated mozzarella and Parmesan cheeses create a symphony of taste 
-and
-      texture. Each bite is a delightful blend of hearty ground beef, 
-aromatic
-      herbs, and tangy tomato sauce, perfectly complemented by the 
-luscious
+      mouthwatering recipe. Layers of tender lasagna noodles intermingled with
+      rich, savory Bolognese sauce, creamy béchamel, and a generous sprinkling
+      of grated mozzarella and Parmesan cheeses create a symphony of taste and
+      texture. Each bite is a delightful blend of hearty ground beef, aromatic
+      herbs, and tangy tomato sauce, perfectly complemented by the luscious
       creaminess of the béchamel. Baked to golden perfection, this classic
-      Italian dish emerges from the oven, exuding an irresistible aroma 
-that
-      will captivate everyone at the table. Whether it's a special 
-occasion or a
-      comforting family dinner, this lasagna recipe is bound to impress 
-and
+      Italian dish emerges from the oven, exuding an irresistible aroma that
+      will captivate everyone at the table. Whether it's a special occasion or a
+      comforting family dinner, this lasagna recipe is bound to impress and
       become a beloved favorite.
     </p>
     <h2>Ingredients</h2>
@@ -61,63 +51,45 @@ and
 
     <ol>
       <li>
-        Boil the Noodles: Cook lasagna noodles in a pot of boiling water 
-until
+        Boil the Noodles: Cook lasagna noodles in a pot of boiling water until
         they become tender. Drain the water and set them aside.
       </li>
       <li>
         Prepare the Bolognese Sauce: In a large pan, cook ground beef with
-        chopped onions and garlic until the meat is browned. Add tomato 
-sauce,
-        diced tomatoes, Italian herbs, salt, and pepper. Let it simmer on 
-low
+        chopped onions and garlic until the meat is browned. Add tomato sauce,
+        diced tomatoes, Italian herbs, salt, and pepper. Let it simmer on low
         heat.
       </li>
       <li>
-        Make the Béchamel Sauce: In a separate saucepan, melt butter, then 
-add
-        flour and stir until it forms a paste. Slowly pour in milk, 
-whisking
-        continuously until the sauce thickens. Season with salt, pepper, 
-and a
+        Make the Béchamel Sauce: In a separate saucepan, melt butter, then add
+        flour and stir until it forms a paste. Slowly pour in milk, whisking
+        continuously until the sauce thickens. Season with salt, pepper, and a
         pinch of nutmeg.
       </li>
       <li>
-        Layer the Lasagna: In a baking dish, spread a layer of Bolognese 
-sauce
-        at the bottom. Place a layer of cooked noodles on top. Then, add a 
-layer
-        of béchamel sauce and sprinkle some mozzarella and Parmesan 
-cheese.
+        Layer the Lasagna: In a baking dish, spread a layer of Bolognese sauce
+        at the bottom. Place a layer of cooked noodles on top. Then, add a layer
+        of béchamel sauce and sprinkle some mozzarella and Parmesan cheese.
       </li>
       <li>
-        Repeat the Layers: Continue layering the lasagna with Bolognese 
-sauce,
-        noodles, béchamel, and cheese until you run out of ingredients. 
-Ensure
+        Repeat the Layers: Continue layering the lasagna with Bolognese sauce,
+        noodles, béchamel, and cheese until you run out of ingredients. Ensure
         the top layer is cheese.
       </li>
       <li>
-        Bake to Perfection: Preheat your oven to 350°F (175°C). Cover the 
-baking
-        dish with aluminum foil and bake for 30 minutes. Then, remove the 
-foil
-        and bake for an additional 15 minutes until the cheese turns 
-golden and
+        Bake to Perfection: Preheat your oven to 350°F (175°C). Cover the baking
+        dish with aluminum foil and bake for 30 minutes. Then, remove the foil
+        and bake for an additional 15 minutes until the cheese turns golden and
         bubbly.
       </li>
       <li>
-        Let It Rest: Once baked, let the lasagna rest for a few minutes 
-before
+        Let It Rest: Once baked, let the lasagna rest for a few minutes before
         serving. This helps the flavors to meld together.
       </li>
       <li>
-        Serve and Enjoy: Cut the lasagna into portions, plate it, and 
-savor the
+        Serve and Enjoy: Cut the lasagna into portions, plate it, and savor the
         delicious layers of flavors in each bite.
       </li>
     </ol>
   </body>
 </html>
-
-
